--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -174,4 +174,9 @@
       margin-top: 10px;
       width: 32px;
     }}
+    .er{
+      font-size: 12px;
+      color: rgb(255, 255, 255);
+      margin-top: 10px;
+      }
 }
