--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -5,7 +5,7 @@
 	align-items: center;
 	min-height: 100vh;
 	flex-direction: column;
-	background:#357fbd;
+	background: #0c2e4a;
 
   .box 
 {
@@ -58,7 +58,7 @@ form
 {
 	position: absolute;
 	inset: 2px;
-	background:#060b26;
+	background: #060b26;;
 	padding: 50px 40px;
 	border-radius: 8px;
 	z-index: 2;
