--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -5,7 +5,7 @@
 	align-items: center;
 	min-height: 100vh;
 	flex-direction: column;
-	background: #357fbd;
+	background:#0c2e4a;
   .box 
   {
     position: relative;
